feat: 요청 중복 방지와 이미지 파일 수명 관리 구현 (#25)
영속 요청 조정과 업로드 재전송, 명시적 저장소 활성화, DB·파일 잠금 기반 만료 정리를 구현한다. 기존 호출자를 새 계약으로 전환하고 V9 및 운영 문서를 추가한다.

기본 local 기동에서는 원본 개발 시드를 보존하되 자동 실행하지 않는다. 실제 PostgreSQL·HTTP·파일 경합 검증과 전체 단위 테스트를 통과했다. 작업별 추가 리뷰는 사용자 지시에 따라 IV 통합 단계로 이관한다.